monday 12_06_2018 , changes of automatizator Hervin Camargo in directv, framework