@@ -1,168 +1,272 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	
   <groupId>choucair_prueba_aut</groupId>
   <artifactId>choucair_prueba_aut</artifactId>
-  <version>1.0</version>
-  <packaging>jar</packaging>
+	<version>0.0.1-SNAPSHOT</version>
 
-  <name>choucair_prueba_aut</name>
-  <url>http://maven.apache.org</url>
-  
- <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-       	<serenity.version>1.6.3</serenity.version> <!-- https://bintray.com/serenity/maven/serenity-core/ -->
-        <serenity.maven.version>1.6.3</serenity.maven.version>
-        <serenity.cucumber.version>1.5.9</serenity.cucumber.version> <!--  https://bintray.com/serenity/maven/serenity-cucumber/ -->
-        <maven.compiler.source>1.8</maven.compiler.source>
-   		<maven.compiler.target>1.8</maven.compiler.target>
-   		<junit.version>4.12</junit.version>
-  </properties>
+	 <name>choucair_prueba_aut</name>
 
-  <!-- Define the Bintray repos for convenience -->
-    <repositories>
-        <repository>
-            <id>serenity</id>
-            <name>bintray</name>
-            <url>http://dl.bintray.com/serenity/maven</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>serenity</id>
-            <name>bintray-plugins</name>
-            <url>http://dl.bintray.com/serenity/maven</url>
-        </pluginRepository>
-    </pluginRepositories>
 
-    <dependencies>
-	    <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-junit -->
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<serenity.version>1.8.19</serenity.version> <!-- https://bintray.com/serenity/maven/serenity-core/ -->
+		<serenity.maven.version>1.8.20</serenity.maven.version>
+		<serenity.cucumber.version>1.6.9</serenity.cucumber.version> <!-- https://bintray.com/serenity/maven/serenity-cucumber/ -->
+	</properties>
+	
+
+	<!-- Define the Bintray repos for convenience -->
+	<!-- <repositories> -->
+	<!-- <repository> -->
+	<!-- <id>serenity</id> -->
+	<!-- <name>bintray</name> -->
+	<!-- <url>http://dl.bintray.com/serenity/maven</url> -->
+	<!-- </repository> -->
+	<!-- </repositories> -->
+	<!-- <pluginRepositories> -->
+	<!-- <pluginRepository> -->
+	<!-- <id>serenity</id> -->
+	<!-- <name>bintray-plugins</name> -->
+	<!-- <url>http://dl.bintray.com/serenity/maven</url> -->
+	<!-- </pluginRepository> -->
+	<!-- </pluginRepositories> -->
+
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>bintray</name>
+			<url>http://jcenter.bintray.com</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>bintray-plugins</name>
+			<url>http://jcenter.bintray.com</url>
+		</pluginRepository>
+	</pluginRepositories>
+
+	<dependencies>
 		<dependency>
-		    <groupId>org.hamcrest</groupId>
-		    <artifactId>hamcrest-junit</artifactId>
-		    <version>2.0.0.0</version>
-		    <scope>test</scope>
+			<groupId>net.serenity-bdd</groupId>
+			<artifactId>serenity-core</artifactId>
+			<version>${serenity.version}</version>
 		</dependency>
-        <dependency>
-            <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-core</artifactId>
-            <version>${serenity.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-junit</artifactId>
-            <version>${serenity.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-cucumber</artifactId>
-            <version>${serenity.cucumber.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.6.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>1.8.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>3.8.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
+		<dependency>
+			<groupId>net.serenity-bdd</groupId>
+			<artifactId>serenity-junit</artifactId>
+			<version>${serenity.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.serenity-bdd</groupId>
+			<artifactId>serenity-screenplay</artifactId>
+			<version>${serenity.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<dependency>
 			<groupId>net.serenity-bdd</groupId>
 			<artifactId>serenity-rest-assured</artifactId>
-			<version>1.6.3</version>
+			<version>${serenity.version}</version>
 		</dependency>
-        <dependency>
-	        <groupId>junit</groupId>
-	        <artifactId>junit</artifactId>
-	        <version>${junit.version}</version>
-	        <scope>test</scope>
-        </dependency>
-    </dependencies>
-	<!-- crea el perfil  de ejecucion -->
-	<profiles>
-		<profile>
-			<id>regresion</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.18.1</version>
-						<configuration>
-							<includes>
-								<include>**/RunnerRutaRegresion.java</include>
-							</includes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>rutacritica</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.18.1</version>
-						<configuration>
-							<includes>
-								<include>**/RunnerRutaCritica.java</include>
-							</includes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-	
-	<!-- fin crea el perfil  de ejecucion -->
-	
+		<dependency>
+			<groupId>net.serenity-bdd</groupId>
+			<artifactId>serenity-cucumber</artifactId>
+			<version>${serenity.cucumber.version}</version>
+		</dependency>
+		<!-- OK -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>1.8.6</version>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>com.fasterxml.jackson.core</groupId> -->
+		<!-- <artifactId>jackson-databind</artifactId> -->
+		<!-- <version>2.5.4</version> -->
+		<!-- </dependency> -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>com.googlecode.lambdaj</groupId> -->
+		<!-- <artifactId>lambdaj</artifactId> -->
+		<!-- <version>2.3.3</version> -->
+		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.8.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-core</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>2.3.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.8</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-jvm</artifactId>
+			<version>2.0.0</version>
+			<type>pom</type>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.jtds/jtds -->
+		<dependency>
+			<groupId>net.sourceforge.jtds</groupId>
+ 		    <artifactId>jtds</artifactId>
+    		<version>1.3.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>6.4.0.jre8</version>
+			<scope>test</scope>
+		</dependency>
+
+
+	</dependencies>
+
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.0.0-M1</version>
 				<executions>
 					<execution>
-						<id>default-compile</id>
+						<id>enforce</id>
 						<configuration>
-							<showDeprecation>true</showDeprecation>
-							<showWarnings>true</showWarnings>
-							<compilerArguments>
-								<source>${maven.compiler.source}</source>
-								<target>${maven.compiler.target}</target>
-							</compilerArguments>
+							<rules>
+								<requireUpperBoundDeps />
+							</rules>
 						</configuration>
-					</execution>
-					<execution>
-						<id>default-testCompile</id>
-						<configuration>
-							<showDeprecation>true</showDeprecation>
-							<showWarnings>true</showWarnings>
-							<compilerArguments>
-								<source>${maven.compiler.source}</source>
-								<target>${maven.compiler.target}</target>
-							</compilerArguments>
-						</configuration>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20.1</version>
+				 <configuration> 
+				 <!-- <skip>true</skip>  -->
+			
+					<!-- <testFailureIgnore>true</testFailureIgnore> -->
+					<includes>
+					<!-- 	 <include>**/definition/**/*Test.java</include> -->
+						<!--include>com.bcs.test/**/**/RunnerFeatures.java</include-->
+						<!-- <include>choucair_prueba_aut/src/test/java/choucair_prueba_aut/RunnerPrepagoSd.java</include> -->
+						<include>choucair_prueba_aut/**/**/RunnerPrepagoSd.java</include>
+					</includes>
+					<!-- <systemProperties> -->
+					<!-- <webdriver.driver>${webdriver.driver}</webdriver.driver> -->
+					<!-- </systemProperties> -->
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.21.0</version>
+				<configuration>
+					<includes>
+						<include>**/test/**/*.java</include>
+						<!-- <include>**/test/*.java</include> <include>**/features/**/When*.java</include> -->
+					</includes>
+					<systemPropertyVariables>
+						<webdriver.base.url>${webdriver.driver}</webdriver.base.url>
+						<surefire.security.manager>java.lang.SecurityManager</surefire.security.manager>
+					</systemPropertyVariables>
+					<!--<forkCount>1</forkCount> <reuseForks>true</reuseForks> <parallel>methods</parallel> 
+						<threadCount>10</threadCount> -->
+					<!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> -->
+					<!-- <shutdown>kill</shutdown> -->
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<!-- <goal>integration-test</goal> -->
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- FUNCIONA BIEN ASI -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>net.serenity-bdd.maven.plugins</groupId>
 				<artifactId>serenity-maven-plugin</artifactId>
-				<version>1.5.9</version>
+				<version>${serenity.maven.version}</version>
+				<dependencies>
+					<dependency>
+						<groupId>net.serenity-bdd</groupId>
+						<artifactId>serenity-core</artifactId>
+						<version>${serenity.version}</version>
+					</dependency>
+				</dependencies>
 				<executions>
 					<execution>
 						<id>serenity-reports</id>
@@ -173,24 +277,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20.1</version>
-				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
-
-					<includes>
-						<include>choucair_prueba_aut/**/*.java</include><!-- Paquete runners y todas las clases .java -->
-					</includes>
-
-					<systemProperties>
-						<webdriver.driver>${webdriver.driver}</webdriver.driver>
-					</systemProperties>
-
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
-
 </project>
